fixed upload styling to get rid of breaks on desktop

--- a/raw/LargerScreens1024.css
+++ b/raw/LargerScreens1024.css
@@ -262,7 +262,6 @@ hambuger menu
         margin: 0 auto;
 
         position: relative;
-        width: 100%;
     }
 	/*
     form input {
@@ -278,6 +277,14 @@ hambuger menu
     }
 
 	*/
+	
+	#contactForm{
+		padding-left: 20px;
+		padding-right: 20px;
+		padding-top: 20px;
+		width:85%;
+	}
+	
 	.file_upload_button{
     margin: 20px;
     padding: 10px;
@@ -479,6 +486,14 @@ hambuger menu
         background-color: white;
         box-shadow: 0px 5px 5px #888888;
     }
+	
+	.Upload_Global_Main_Title{
+		width: 100%;
+        height: 150px;
+        position: relative;
+        background-color: white;
+        box-shadow: 0px 5px 5px #888888;
+	}
 
 
     #m-profile-pic-intro {
@@ -643,7 +658,7 @@ hambuger menu
 
 	.upload_page_music_global_white{
 		 width: 100%;
-        height: 100vh;
+        
         background-color: white;
         position: absolute;
         top: 170px;
@@ -683,7 +698,7 @@ hambuger menu
 	}
 
 	#upload_page_music_global_white{
-		height: 1850px !important;
+		padding-bottom:120px;
 	}
 
 	#CreateGroupsForm_white{
@@ -1172,7 +1187,7 @@ hambuger menu
 	}
 
 	.GroupsInformation-Title textarea{
-		width: 99%;
+		width: 100%;
 		height: 60px;
 		font-family: Avenir Light;
     font-size: 25px;
@@ -1198,20 +1213,19 @@ hambuger menu
         color: darkgray;
 	}
 
+
 	#Create_music_global_upload_button{
 		width: 200px;
 		height: 50px;
 		  border: 2px solid darkgray;
 		background-color: #ffffff;
 		border-radius: 25px;
-		position: absolute;
-		left: 0;
-		right: 0;
-		margin: 0 auto;
 		font-family: Avenir-Medium;
         font-size: 18px;
         color: darkgray;
-		bottom: 0;
+		display: block;
+          margin : 0 auto;
+
 	}
 
 	.GroupsInformation-Description textarea{
@@ -1955,12 +1969,69 @@ hambuger menu
     border-radius: 10px;
     border: 1px solid #dedede;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, .15);
+	margin-left: 30px;
 	}
 
 	.upload_page_global_titles{
 		font-size: 30px;
-    font-family: avenir medium;
+		font-family: avenir medium;
 		font-weight: bold;
+		padding-bottom: 15px;
+	}
+	
+	.upload_global_image_area{
+		float:left;
+		margin-top: 30px;
+		width: 100%;
+		border-bottom: solid 1px #DCDCDC;
+		padding-bottom: 20px;
+	}
+	
+	.upload_global_song_area{
+		float:left;
+		margin-top: 30px;
+		width: 100%;
+		border-bottom: solid 1px #DCDCDC;
+		padding-bottom: 20px;
+	}
+	
+	.upload_global_radio_button_area{
+		float:left;
+		margin-top: 30px;
+		width: 100%;
+		border-bottom: solid 1px #DCDCDC;
+		padding-bottom: 20px;
+	}
+	
+	.upload_global_genre_area{
+		float:left;
+		margin-top: 30px;
+		width: 100%;
+		border-bottom: solid 1px #DCDCDC;
+		padding-bottom: 20px;
+	}
+	
+	.upload_global_moods_area{
+		float:left;
+		margin-top: 30px;
+		width: 100%;
+		border-bottom: solid 1px #DCDCDC;
+		padding-bottom: 20px;
+	}
+	
+	.upload_global_instruments_area{
+		float:left;
+		margin-top: 30px;
+		width: 100%;
+		border-bottom: solid 1px #DCDCDC;
+		padding-bottom: 20px;
+	}
+	
+	.upload_global_submit_area{
+		float:left;
+		margin-top: 50px;
+		width: 100%;
+		padding-bottom: 20px;
 	}
 
 	.label_music_sample_global_upload {
